--- a/_locales/hicbit-jsdoc-strings.json
+++ b/_locales/hicbit-jsdoc-strings.json
@@ -6,10 +6,11 @@
   "hicbit.hicbit_analyzeBluetoothCmd": "Resolve the Bluetooth that phone APP send command type, the total of nine types of commands: tank display command, servo debug command, obtaining the distance of ultrasonic command, obtaining temperature command, obtain sound size rank orders, to obtain the light level command, set the color lights command, honking command, firmware version information command.",
   "hicbit.hicbit_avoidSensor": "Get the obstacle avoidance sensor status,1 detect obstacle,0 no detect obstacle",
   "hicbit.hicbit_belt_clearLight": "Clear the color of the colored lights and turn off the lights.",
-  "hicbit.hicbit_belt_initRGBLight": "Initialize RGB\nfunction hicbit_initRGBLight() {\nif (!lhRGBLight) {\nlhRGBLight = hicbitRGBLight.create(DigitalPin.P15, 6, hicbitRGBPixelMode.RGB);\n}\nhicbit_clearLight();\n}\nSet the brightness of the strip. This flag only applies to future operation.\n\n//% \n//% \nexport function hicbit_setBrightness(brightness: number): void {\nlhRGBLight.setBrightness(brightness);\n}\nSet the color of the colored lights, after finished the setting please perform  the display of colored lights.\n//% \nexport function hicbit_setPixelRGB(lightoffset: hicbitLights, rgb: hicbitRGBColors) {\nlhRGBLight.setPixelColor(lightoffset, rgb);\n}\nSet RGB Color argument\n//% \nexport function hicbit_setPixelRGBArgs(lightoffset: hicbitLights, rgb: number) {\nlhRGBLight.setPixelColor(lightoffset, rgb);\n}\nDisplay the colored lights, and set the color of the colored lights to match the use. After setting the color of the colored lights, the color of the lights must be displayed.\n//% \nexport function hicbit_showLight() {\nlhRGBLight.show();\n}\nClear the color of the colored lights and turn off the lights.\n//% \nexport function hicbit_clearLight() {\nlhRGBLight.clear();\n}\nInitialize Light belt",
+  "hicbit.hicbit_belt_initRGBLight": "Initialize Light belt",
   "hicbit.hicbit_belt_setPixelRGB": "Set the color of the colored lights, after finished the setting please perform  the display of colored lights.",
   "hicbit.hicbit_belt_showLight": "Display the colored lights, and set the color of the colored lights to match the use. After setting the color of the colored lights, the color of the lights must be displayed.",
   "hicbit.hicbit_checkCurrentColor": "Color sensor return the color.",
+  "hicbit.hicbit_clearLight": "Clear the color of the colored lights and turn off the lights.",
   "hicbit.hicbit_connectWifi": "Connect to the wifi",
   "hicbit.hicbit_convertBattery": "Convert the battery value to the standard command and send it to the mobile phone. The APP displays the current voltage.",
   "hicbit.hicbit_convertHandCmd": "Convert the hand cmd to phone app",
@@ -33,8 +34,13 @@
   "hicbit.hicbit_runActionGroup": "Set the servo controller to run a actiongroup",
   "hicbit.hicbit_runActionGroup|param|times": "Running times. eg: 1",
   "hicbit.hicbit_send_getMac": "Send get mac address command",
+  "hicbit.hicbit_setBrightness": "Set the brightness of the strip. This flag only applies to future operation.",
+  "hicbit.hicbit_setBrightness|param|brightness": "a measure of LED brightness in 0-255. eg: 255",
   "hicbit.hicbit_setFanSpeed": "Set the speed of the fan, range of -100~100.",
   "hicbit.hicbit_setMotorSpeed": "Send robot attitude to the servo controller\n\n\n\nSet the speed of the number 1 motor and number 2 motor, range of -100~100, that can control the tank to go advance or turn of.",
+  "hicbit.hicbit_setPixelRGB": "Set the color of the colored lights, after finished the setting please perform  the display of colored lights.",
+  "hicbit.hicbit_setPixelRGBArgs": "Set RGB Color argument",
+  "hicbit.hicbit_showLight": "Display the colored lights, and set the color of the colored lights to match the use. After setting the color of the colored lights, the color of the lights must be displayed.",
   "hicbit.hicbit_stopActionGroup": "Stop running actiongroup",
   "hicbit.hicbit_touchButton": "Get the condition of the touch button,press return 1,or return 0",
   "hicbit.hicbit_ultrasonic": "Get the distance of ultrasonic detection to the obstacle",
