--- a/_locales/hicbit-strings.json
+++ b/_locales/hicbit-strings.json
@@ -58,6 +58,7 @@
   "hicbit.hicbit_belt_showLight|block": "Show light belt",
   "hicbit.hicbit_busServoPort.port6|block": "Port 6",
   "hicbit.hicbit_checkCurrentColor|block": "Current color %color",
+  "hicbit.hicbit_clearLight|block": "Clear light",
   "hicbit.hicbit_colorSensorPort.port4|block": "Port 4",
   "hicbit.hicbit_connectWifi|block": "Connect to the Wifi,name|%ssid|and password %passwrd",
   "hicbit.hicbit_convertBattery|block": "Convert battery %data",
@@ -94,8 +95,12 @@
   "hicbit.hicbit_send_getMac|block": "Send pair command",
   "hicbit.hicbit_servorange.range1|block": "180",
   "hicbit.hicbit_servorange.range2|block": "270",
+  "hicbit.hicbit_setBrightness|block": "set brightness %brightness",
   "hicbit.hicbit_setFanSpeed|block": "Set |%port fan speed(-100~100)|%speed1",
   "hicbit.hicbit_setMotorSpeed|block": "Set motor1 speed(-100~100)|%speed1|and motor2|speed %speed2",
+  "hicbit.hicbit_setPixelRGBArgs|block": "Set|%lightoffset|color to %rgb",
+  "hicbit.hicbit_setPixelRGB|block": "Set|%lightoffset|color to %rgb",
+  "hicbit.hicbit_showLight|block": "Show light",
   "hicbit.hicbit_stopActionGroup|block": "Stop ActionGroup",
   "hicbit.hicbit_touchButton|block": "Touch button|port %port|is pressed",
   "hicbit.hicbit_touchKeyPort.port1|block": "Port 1",
