--- a/_locales/zh/hicbit-strings.json
+++ b/_locales/zh/hicbit-strings.json
@@ -153,5 +153,5 @@
 	"hicbit.hicbit_digitaltubePort.port2|block":"接口2",
 	"hicbit.hicbit_convertHandCmd|block":"转换uHand:bit指令 %data",
 	"hicbit.Clearscreen|block":"清屏",
-	"hicbit.setDisplay|block":"屏幕显示 行数：%line|内容：%text| 数值：%value| 量程：%unit1|",
+	"hicbit.setDisplay|block":"屏幕显示 行数：%line|内容：%text| 数值：%value| 量程：%unit1|"
 }
