--- a/_locales/hicbit-strings.json
+++ b/_locales/hicbit-strings.json
@@ -59,6 +59,7 @@
   "hicbit.hicbit_busServoPort.port6|block": "Port 6",
   "hicbit.hicbit_checkCurrentColor|block": "Current color %color",
   "hicbit.hicbit_clearLight|block": "Clear light",
+  "hicbit.hicbit_clear|block": "clear digitaltube",
   "hicbit.hicbit_colorSensorPort.port4|block": "Port 4",
   "hicbit.hicbit_connectWifi|block": "Connect to the Wifi,name|%ssid|and password %passwrd",
   "hicbit.hicbit_convertBattery|block": "Convert battery %data",
@@ -68,6 +69,7 @@
   "hicbit.hicbit_convertUltrasonic|block": "Convert ultrasonic distance %data",
   "hicbit.hicbit_digitaltubePort.port1|block": "Port 1",
   "hicbit.hicbit_digitaltubePort.port2|block": "Port 2",
+  "hicbit.hicbit_digitaltube|block": "digitaltube|%port|intensity %intensity|LED count %count",
   "hicbit.hicbit_fanPort.port1|block": "Port 1",
   "hicbit.hicbit_fanPort.port2|block": "Port 2",
   "hicbit.hicbit_getArgs|block": "Get bluetooth command|%str|argument at %index",
@@ -79,6 +81,7 @@
   "hicbit.hicbit_getSoundVolume|block": "Sound volume",
   "hicbit.hicbit_getphotosensitiveValue|block": "Get Photosensitive|port %port|value(0~255)",
   "hicbit.hicbit_init_colorSensor|block": "Initialize color sensor port at %port",
+  "hicbit.hicbit_intensity|block": " digitaltube set intensity %val",
   "hicbit.hicbit_isConnectedServer|block": "Device is connected to server?",
   "hicbit.hicbit_knobPort.port1|block": "Port 1",
   "hicbit.hicbit_lineFollowPort.port1|block": "Port 1",
@@ -87,6 +90,8 @@
   "hicbit.hicbit_lineFollower.S1_OUT_S2_IN|block": "Sensor2 in black line but sensor1 not",
   "hicbit.hicbit_lineFollower.S1_OUT_S2_OUT|block": "Sensor1 and sensor2 are out black line",
   "hicbit.hicbit_lineSensorValue|block": "Get line follower sensor|port %port|%sensor|ad value",
+  "hicbit.hicbit_off|block": "turn off digitaltube",
+  "hicbit.hicbit_on|block": "turn on digitaltube",
   "hicbit.hicbit_photosensitivePort.port1|block": "Port 1",
   "hicbit.hicbit_photosensitiveSensor|block": "Photosensitive sensor|port %port|detect bright",
   "hicbit.hicbit_readAngle|block": "Send |%servo|angle command ",
@@ -100,7 +105,11 @@
   "hicbit.hicbit_setMotorSpeed|block": "Set motor1 speed(-100~100)|%speed1|and motor2|speed %speed2",
   "hicbit.hicbit_setPixelRGBArgs|block": "Set|%lightoffset|color to %rgb",
   "hicbit.hicbit_setPixelRGB|block": "Set|%lightoffset|color to %rgb",
+  "hicbit.hicbit_showDP|block": "digitaltube DotPoint at| %bit|show %show",
   "hicbit.hicbit_showLight|block": "Show light",
+  "hicbit.hicbit_showNumber|block": "digitaltube show number| %num",
+  "hicbit.hicbit_showbit|block": "digitaltube show digit| %num|at %bit",
+  "hicbit.hicbit_showhex|block": "digitaltube show hex number| %num",
   "hicbit.hicbit_stopActionGroup|block": "Stop ActionGroup",
   "hicbit.hicbit_touchButton|block": "Touch button|port %port|is pressed",
   "hicbit.hicbit_touchKeyPort.port1|block": "Port 1",
@@ -108,11 +117,6 @@
   "hicbit.hicbit_touchKeyPort.port3|block": "Port 3",
   "hicbit.hicbit_ultrasonicPort.port1|block": "Port 1",
   "hicbit.hicbit_ultrasonicPort.port2|block": "Port 2",
-  "hicbit.hicbit_ultrasonicPort.port3|block": "Port 3",
-  "hicbit.hicbit_ultrasonicPort.port4|block": "Port 4",
-  "hicbit.hicbit_ultrasonicPort.port5|block": "Port 5",
-  "hicbit.hicbit_ultrasonicPort.port7|block": "Port 7",
-  "hicbit.hicbit_ultrasonicPort.port8|block": "Port 8",
   "hicbit.hicbit_ultrasonic|block": "Ultrasonic|port %port|distance(cm)",
   "hicbit.onhicbit_getAngle|block": "on hicbit|%servo|get angle",
   "hicbit.onhicbit_getMac|block": "on hicbit get device id",
